@@ -1,5 +1,7 @@
 0.173
 - Update to Jetty 9.4.12.v20180830.
+- Update the default value of the "http-server.https.excluded-cipher" config
+  property to match Jetty's default excluded cipher suites.
 
 0.172
 
